k8s/40-middleware-correlation.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: autoservice-correlation
  namespace: autoservice
spec:
  headers:
    customResponseHeaders:
      X-Autoservice-Gateway: traefik
