k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autoservice
  labels:
    app.kubernetes.io/part-of: autoservice
