k8s/23-deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoservice-postgres
  namespace: autoservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoservice-postgres
  template:
    metadata:
      labels:
        app: autoservice-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: autoservice-postgres-pvc
        - name: postgres-init
          configMap:
            name: autoservice-postgres-init
