k8s/30-deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoservice-app
  namespace: autoservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autoservice-app
  template:
    metadata:
      labels:
        app: autoservice-app
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: autoservice-app
          image: ghcr.io/cristhian-ruescas/autoservice:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8088
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
