k8s/24-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoservice-postgres
  namespace: autoservice
spec:
  selector:
    app: autoservice-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
