k8s/postgres-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: autoservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      automountServiceAccountToken: false  # <- Fix do Sonar: Bloqueia a montagem do token de serviço
      containers:
        - name: postgresql
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "50Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: autoservice
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
