k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoservice
  namespace: autoservice
  labels:
    app: autoservice
spec:
  type: ClusterIP
  selector:
    app: autoservice
  ports:
  - name: http
    port: 8088
    targetPort: http
    protocol: TCP
  sessionAffinity: None
