k8s/33-ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoservice-app-ingress
  namespace: autoservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: autoservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoservice-app
                port:
                  number: 8088
