k8s/40-ingressroute-app.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: autoservice-app
  namespace: autoservice
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 10
      middlewares:
        - name: autoservice-correlation
      services:
        - name: autoservice-app
          port: 8088
